static_sites/cv.martinlutheryung.com/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvmly
  labels:
    app: cvmly
    service: cvmly
spec:
  selector:
    app: cvmly
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvmly-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cvmly
      version: v1
  template:
    metadata:
      labels:
        app: cvmly
        version: v1
    spec:
      serviceAccountName: cvmly
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: cvmly
        image: nginx:stable-alpine-perl
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: website-source-cv
            readOnly: true
      volumes:
      - name: website-source-cv
        hostPath:
          path: '/mnt/gv0/production/websites/cv.martinlutheryung.com/html'
          type: Directory
