static_sites/cv.martinlutheryung.com/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cvmly-gateway
spec:
  selector:
    app: istio-ingressgateway-cv
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cv.martinlutheryung.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cvmly
spec:
  hosts:
  - "cv.martinlutheryung.com"
  gateways:
  - cvmly-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: cvmly
